--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^11.1.5",
     "react": "^18.2.0",
-    "react-date-range": "^2.0.0-alpha.4",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
